--- a/mlabs/Makefile
+++ b/mlabs/Makefile
@@ -19,6 +19,10 @@ test-watch:
 
 # Target to use as dependency to fail if not inside nix-shell
 requires_nix_shell:
-	@ [ -v IN_NIX_SHELL ] || echo "The $(MAKECMDGOALS) target must be run from inside nix-shell"
-	@ [ -v IN_NIX_SHELL ] || (echo "    run 'nix-shell --pure' first" && false)
+	@ [ "($IN_NIX_SHELL)" ] || echo "The $(MAKECMDGOALS) target must be run from inside nix-shell"
+	@ [ "($IN_NIX_SHELL)" ] || (echo "    run 'nix-shell --pure' first" && false)
 
+# Generate TOC for README.md
+# It has to be manually inserted into the README.md for now.
+readme_contents:
+	nix-shell -p nodePackages.npm --command "npx markdown-toc ./README.md --no-firsth1"
