--- a/AltLabs/dex-token-swap/plutus-starter.cabal
+++ b/AltLabs/dex-token-swap/plutus-starter.cabal
@@ -87,12 +87,12 @@ library
             -- See Plutus Tx readme
             -fobject-code -fno-ignore-interface-pragmas -fno-omit-interface-pragmas -fplugin-opt PlutusTx.Plugin:defer-errors -haddock 
 
-test-suite plutus-example-projects-test
+test-suite dex-swap-test
   type: exitcode-stdio-1.0
   main-is: Spec.hs
   hs-source-dirs: specs
-  -- other-modules:
-  --   Spec.Game
+  other-modules:
+    CurrencySpec
   default-language: Haskell2010
   default-extensions: ExplicitForAll ScopedTypeVariables
                         DeriveGeneric StandaloneDeriving DeriveLift
