--- a/MetaLamp/lending-pool/plutus-starter.cabal
+++ b/MetaLamp/lending-pool/plutus-starter.cabal
@@ -24,6 +24,7 @@ maintainer:         Your email
 library
     exposed-modules:
       Plutus.Abstract.State Plutus.Abstract.State.Select Plutus.Abstract.State.Update Plutus.Abstract.ContractResponse Plutus.Abstract.OutputValue Plutus.Abstract.TxUtils Plutus.Contracts.Service.FungibleToken Plutus.Contracts.Service.Oracle Plutus.Contracts.LendingPool.OnChain.Core Plutus.Contracts.LendingPool.OnChain.Core.Script Plutus.Contracts.LendingPool.OnChain.Core.Validator Plutus.Contracts.LendingPool.OnChain.Core.Logic Plutus.Contracts.LendingPool.OnChain.AToken Plutus.Contracts.LendingPool.OffChain.AToken Plutus.Contracts.LendingPool.OffChain.Info Plutus.Contracts.LendingPool.OffChain.Owner Plutus.Contracts.LendingPool.OffChain.State Plutus.Contracts.LendingPool.OffChain.User Plutus.PAB.Simulation Ext.Plutus.Ledger.Value Ext.Plutus.Ledger.Contexts
+      Plutus.PAB.App
     build-depends:
       base >= 4.9 && < 5,
       aeson,
@@ -34,6 +35,7 @@ library
       freer-extras,
       prettyprinter,
       lens,
+      yaml,
       -- Plutus:
       playground-common,
       plutus-contract,
@@ -42,7 +44,9 @@ library
       plutus-ledger,
       plutus-ledger-api,
       plutus-use-cases,
-      plutus-pab
+      plutus-pab,
+      -- Cardano:
+      iohk-monitoring,
     hs-source-dirs: src
     default-language: Haskell2010
     ghc-options:
@@ -57,6 +61,32 @@ executable pab
   build-depends:
     base >= 4.9 && < 5,
     plutus-starter
+
+executable distribute-funds
+   main-is: Main.hs
+   hs-source-dirs: distribute-funds
+   ghc-options:
+     -threaded
+   build-depends:
+     base >= 4.9 && < 5,
+     text,
+     plutus-starter,
+     plutus-ledger-api,
+     plutus-pab,
+     plutus-tx
+
+executable create-oracles
+   main-is: Main.hs
+   hs-source-dirs: create-oracles
+   ghc-options:
+     -threaded
+   build-depends:
+     base >= 4.9 && < 5,
+     text,
+     plutus-starter,
+     plutus-ledger-api,
+     plutus-pab,
+     plutus-tx
 
 executable pab-simulation
   main-is: Main.hs
