make aave be in request parameters

--- a/MetaLamp/lending-pool/plutus-starter.cabal
+++ b/MetaLamp/lending-pool/plutus-starter.cabal
@@ -58,32 +58,6 @@ executable pab
     base >= 4.9 && < 5,
     plutus-starter
 
-executable owner-contract
-  main-is: Main.hs
-  hs-source-dirs: owner-contract
-  ghc-options:
-    -threaded
-  build-depends:
-    base >= 4.9 && < 5,
-    text,
-    plutus-starter,
-    plutus-ledger-api,
-    plutus-pab,
-    plutus-tx
-
-executable user-contract
-  main-is: Main.hs
-  hs-source-dirs: user-contract
-  ghc-options:
-    -threaded
-  build-depends:
-    base >= 4.9 && < 5,
-    text,
-    plutus-starter,
-    plutus-ledger-api,
-    plutus-pab,
-    plutus-tx
-
 executable pab-simulation
   main-is: Main.hs
   hs-source-dirs: pab-simulation
@@ -121,6 +95,45 @@ executable generate-purs
     plutus-contract,
     plutus-use-cases,
     plutus-ledger,
+    plutus-tx
+
+executable owner-contract
+  main-is: Main.hs
+  hs-source-dirs: owner-contract
+  ghc-options:
+    -threaded
+  build-depends:
+    base >= 4.9 && < 5,
+    text,
+    plutus-starter,
+    plutus-ledger-api,
+    plutus-pab,
+    plutus-tx
+
+executable user-contract
+  main-is: Main.hs
+  hs-source-dirs: user-contract
+  ghc-options:
+    -threaded
+  build-depends:
+    base >= 4.9 && < 5,
+    text,
+    plutus-starter,
+    plutus-ledger-api,
+    plutus-pab,
+    plutus-tx
+
+executable info-contract
+  main-is: Main.hs
+  hs-source-dirs: info-contract
+  ghc-options:
+    -threaded
+  build-depends:
+    base >= 4.9 && < 5,
+    text,
+    plutus-starter,
+    plutus-ledger-api,
+    plutus-pab,
     plutus-tx
 
 test-suite test
