--- a/AltLabs/dex-token-swap/hie.yaml
+++ b/AltLabs/dex-token-swap/hie.yaml
@@ -4,3 +4,5 @@ cradle:
       component: "exe:plutus-starter-pab"
     - path: "./src"
       component: "lib:plutus-starter"
+    - path: "./specs"
+      component: "test-suite:dex-swap-test"
