move websocket parsing functions to their own module

--- a/use-case-2/frontend/frontend.cabal
+++ b/use-case-2/frontend/frontend.cabal
@@ -28,6 +28,7 @@ library
                , vessel
   exposed-modules:
     Frontend
+    Frontend.WebsocketParse
   ghc-options: -Wall -Wredundant-constraints -Wincomplete-uni-patterns -Wincomplete-record-updates -O -fno-show-valid-hole-fits
 
 executable frontend
