--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -32,6 +32,7 @@ library
                , rhyolite-backend-db
                , rhyolite-backend-notification-postgres
                , text
+               , time
                , obelisk-backend
                , obelisk-route
                , vector
