--- a/mlabs/stack.yaml
+++ b/mlabs/stack.yaml
@@ -10,9 +10,10 @@ packages:
 
 extra-deps:
 - git: https://github.com/input-output-hk/plutus.git
-  commit: 6658064e62bea0129f5502f5ed8b6a572b7f2246
+  commit: 926a49d16439b693648b68b7e6eb7877a5e622e4
   subdirs:
     - playground-common
+    - plutus-chain-index
     - plutus-core
     - plutus-contract
     - plutus-ledger
@@ -25,17 +26,15 @@ extra-deps:
     - freer-extras
     - quickcheck-dynamic
     - word-array
-  # Flat compression
+# Flat compression
 - pure-zlib-0.6.7@sha256:5a1cdf87bf3079b7d3abace1f94eeb3c597c687a38a08ee2908783e609271467,3487
-  # FEAT/NEAT and deps
+# FEAT/NEAT and deps
 - lazy-search-0.1.2.0
 - size-based-0.1.2.0
 - testing-feat-1.1.0.0
 - Stream-0.4.7.2@sha256:ed78165aa34c4e23dc53c9072f8715d414a585037f2145ea0eb2b38300354c53,1009
 - lazysmallcheck-0.6@sha256:dac7a1e4877681f1260309e863e896674dd6efc1159897b7945893e693f2a6bc,1696
-  # Other missing packages
-- aws-lambda-haskell-runtime-3.0.3
-- aws-lambda-haskell-runtime-wai-1.0.2@sha256:5ce655247461b562c8048011ddc022130135a03417def8203aad92366cc979ab,1965
+# Other missing packages
 - composition-prelude-3.0.0.2
 - constraints-extras-0.3.0.2
 - dependent-map-0.4.0.0
@@ -46,8 +45,8 @@ extra-deps:
 - nothunks-0.1.2
 - indexed-traversable-instances-0.1
 - base16-bytestring-1.0.1.0
-  # A revision was added to keep the bounds down, we don't actually want this!
-  # we work around the newer persistent-template by adding flags below
+# A revision was added to keep the bounds down, we don't actually want this!
+# we work around the newer persistent-template by adding flags below
 - eventful-sql-common-0.2.0@rev:0
 - eventful-sqlite-0.2.0
 - monoidal-containers-0.6.0.1
@@ -68,9 +67,12 @@ extra-deps:
 - partial-order-0.2.0.0@sha256:a0d6ddc9ebcfa965a5cbcff1d06d46a79d44ea5a0335c583c2a51bcb41334487,2275
 - streaming-binary-0.2.2.0@sha256:09b9a9b0291199c5808e88dcf9c93e7b336e740c71efeafd7c835b59794a8c90,1034
 - transformers-except-0.1.1@sha256:6c12ef8e632a10440968cd541e75074bd6ef4b5ff4012677f8f8189d7b2d0df6,1387
+- beam-core-0.9.0.0@sha256:e5b1cb4d5b8a8a166f3373e8718672a3884feb9a5a133404b047b0af76538023,5282
+- beam-migrate-0.5.0.0@sha256:d3f7e333ec9e96122ccec6be0d38a88f766dfc248323be73fd0b3cee245ea421,4923
+- beam-sqlite-0.5.0.0@sha256:d785bf40101235a72b80652ce27be9c8048de5f7c171ccb23e1e62b8f1ce6e7c,3496
 
-  # cabal.project is the source of truth for these pins, they are explained there
-  # and need to be kept in sync.
+# cabal.project is the source of truth for these pins, they are explained there
+# and need to be kept in sync.
 - git: https://github.com/Quid2/flat.git
   commit: 95e5d7488451e43062ca84d5376b3adcc465f1cd
 - git: https://github.com/shmish111/purescript-bridge.git
@@ -80,8 +82,9 @@ extra-deps:
 - git: https://github.com/input-output-hk/cardano-crypto.git
   commit: ce8f1934e4b6252084710975bd9bbc0a4648ece4
 - git: https://github.com/input-output-hk/ouroboros-network
-  commit: e50613562d6d4a0f933741fcf590b0f69a1eda67
+  commit: e338f2cf8e1078fbda9555dd2b169c6737ef6774
   subdirs:
+    - monoidal-synchronisation
     - typed-protocols
     - typed-protocols-examples
     - ouroboros-network
@@ -92,7 +95,7 @@ extra-deps:
     - ouroboros-consensus-cardano
     - ouroboros-consensus-shelley
     - io-sim
-    - io-sim-classes
+    - io-classes
     - network-mux
 - git: https://github.com/input-output-hk/cardano-prelude
   commit: fd773f7a58412131512b9f694ab95653ac430852
@@ -110,7 +113,7 @@ extra-deps:
     - cardano-crypto-praos
     - strict-containers
 - git: https://github.com/input-output-hk/cardano-ledger-specs
-  commit: a3ef848542961079b7cd53d599e5385198a3035c
+  commit: b8f1ebb46a91f1c634e616feb89ae34de5937e17
   subdirs:
     - byron/chain/executable-spec
     - byron/crypto
@@ -127,31 +130,40 @@ extra-deps:
     - cardano-ledger-core
     - alonzo/impl
 - git: https://github.com/input-output-hk/iohk-monitoring-framework
-  commit: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
+  commit: 34abfb7f4f5610cabb45396e0496472446a0b2ca
   subdirs:
     - contra-tracer
     - iohk-monitoring
     - tracer-transformers
     - plugins/backend-ekg
+    - plugins/backend-aggregation
+    - plugins/backend-monitoring
+    - plugins/backend-trace-forwarder
+    - plugins/scribe-systemd
 - git: https://github.com/input-output-hk/cardano-node.git
-  commit: b3cabae6b3bf30a0b1b4e78bc4b67282dabad0a6
+  commit: f3ef4ed72894499160f2330b91572a159005c148
   subdirs:
     - cardano-api
+    - cardano-cli
+    - cardano-node
+    - cardano-config
 - git: https://github.com/input-output-hk/Win32-network
   commit: 94153b676617f8f33abe8d8182c37377d2784bd1
 - git: https://github.com/input-output-hk/hedgehog-extras
   commit: 8bcd3c9dc22cc44f9fcfe161f4638a384fc7a187
-#- git: https://github.com/input-output-hk/libsodium
-#  commit: 004952bb57b2a6d2c033969820c80255e8362615
+- git: https://github.com/input-output-hk/goblins
+  commit: cde90a2b27f79187ca8310b6549331e59595e7ba
+
+# More missing packages, that were not present in `stack.yaml` in plutus repository
+- Unique-0.4.7.8
+- moo-1.2
+- gray-code-0.3.1
+- libsystemd-journal-1.4.5
+
+
 allow-newer: true
 
-# flags:
-#   cardano-crypto-praos:
-#     external-libsodium-vrf: true
-
 extra-package-dbs: []
-
-
 
 ghc-options:
   # Newer versions of persistent-template require some extra language extensions. Fortunately
