--- a/use-case-2/backend/backend.cabal
+++ b/use-case-2/backend/backend.cabal
@@ -16,6 +16,7 @@ library
                , bytestring
                , common
                , constraints-extras
+               , dense-linear-algebra
                , dependent-sum
                , dependent-sum-template
                , frontend
@@ -31,6 +32,7 @@ library
                , rhyolite-backend
                , rhyolite-backend-db
                , rhyolite-backend-notification-postgres
+               , statistics
                , text
                , time
                , obelisk-backend
