--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -1,5 +1,6 @@
-index-state: 2021-04-12T22:47:21Z
-
+-- Bump this if you need newer packages
+index-state: 2021-07-07T00:00:00Z
+             
 packages: ./.
 
 -- You never, ever, want this.
@@ -12,21 +13,34 @@ benchmarks: true
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
-  subdir:
-     playground-common
-     plutus-core
-     plutus-contract
-     plutus-ledger
-     plutus-tx
-     plutus-tx-plugin
-     prettyprinter-configurable
-     plutus-ledger-api
-     plutus-pab
-     plutus-use-cases
-     freer-extras
-     quickcheck-dynamic
+  subdir: doc
+          fake-pab
+          freer-extras
+          marlowe
+          marlowe-actus
+          marlowe-playground-server
+          marlowe-dashboard-server
+          marlowe-symbolic
+          playground-common
+          plutus-benchmark
+          plutus-chain-index
+          plutus-contract
+          plutus-core
+          plutus-errors
+          plutus-ledger
+          plutus-ledger-api
+          plutus-metatheory
+          plutus-pab
+          plutus-playground-server
+          plutus-tx
+          plutus-tx-plugin
+          plutus-use-cases
+          prettyprinter-configurable
+          quickcheck-dynamic
+          web-ghc
+          word-array
   -- Update plutus revision here! Make sure this matches `cat ./nix/sources.json | jq '.plutus.rev'`
-  tag: 62be7a2d6dff285ad72d5bc6f5f11991ffae888b
+  tag: e3e220f5434d5cc01d613e656dc661acbadd55a5
 
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
@@ -41,25 +55,30 @@ source-repository-package
 -- newer version of persistent. See stack.yaml for the mirrored
 -- configuration.
 package eventful-sql-common
-  ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances
+  ghc-options: -XDerivingStrategies -XStandaloneDeriving -XUndecidableInstances -XDataKinds -XFlexibleInstances -XMultiParamTypeClasses
 
 allow-newer:
-           -- Has a commit to allow newer aeson, not on Hackage yet
-           monoidal-containers:aeson
            -- Pins to an old version of Template Haskell, unclear if/when it will be updated
-           , size-based:template-haskell
+           size-based:template-haskell
 
            -- The following two dependencies are needed by plutus.
            , eventful-sql-common:persistent
            , eventful-sql-common:persistent-template
+           , ouroboros-consensus-byron:formatting
+           , beam-core:aeson
+           , beam-sqlite:aeson
+           , beam-sqlite:dlist
+           , beam-migrate:aeson
 
 constraints:
-  -- aws-lambda-haskell-runtime-wai doesn't compile with newer versions
-  aws-lambda-haskell-runtime <= 3.0.3
   -- big breaking change here, inline-r doens't have an upper bound
-  , singletons < 3.0
+  singletons < 3.0
   -- breaks eventful even more than it already was
   , persistent-template < 2.12
+  -- bizarre issue: in earlier versions they define their own 'GEq', in newer
+  -- ones they reuse the one from 'some', but there isn't e.g. a proper version
+  -- constraint from dependent-sum-template (which is the library we actually use).
+  , dependent-sum > 0.6.2.0
 
 -- See the note on nix/pkgs/default.nix:agdaPackages for why this is here.
 -- (NOTE this will change to ieee754 in newer versions of nixpkgs).
@@ -85,23 +104,25 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
-  tag: f73079303f663e028288f9f4a9e08bcca39a923e
+  tag: ce8f1934e4b6252084710975bd9bbc0a4648ece4
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: 4251c0bb6e4f443f00231d28f5f70d42876da055
+  tag: a715c7f420770b70bbe95ca51d3dec83866cb1bd
   subdir:
     binary
     binary/test
     slotting
     cardano-crypto-class
     cardano-crypto-praos
+    cardano-crypto-tests
+    strict-containers
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-prelude
-  tag: ee4e7b547a991876e6b05ba542f4e62909f4a571
+  tag: fd773f7a58412131512b9f694ab95653ac430852
   subdir:
     cardano-prelude
     cardano-prelude-test
@@ -109,32 +130,40 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: 6cb9052bde39472a0555d19ade8a42da63d3e904
+  tag: e338f2cf8e1078fbda9555dd2b169c6737ef6774
   subdir:
+    monoidal-synchronisation
     typed-protocols
     typed-protocols-examples
     ouroboros-network
     ouroboros-network-testing
     ouroboros-network-framework
+    ouroboros-consensus
+    ouroboros-consensus-byron
+    ouroboros-consensus-cardano
+    ouroboros-consensus-shelley
     io-sim
-    io-sim-classes
+    io-classes
     network-mux
-    Win32-network
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: a89c38ed5825ba17ca79fddb85651007753d699d
+  tag: 34abfb7f4f5610cabb45396e0496472446a0b2ca
   subdir:
     iohk-monitoring
     tracer-transformers
     contra-tracer
+    plugins/backend-aggregation
     plugins/backend-ekg
+    plugins/backend-monitoring
+    plugins/backend-trace-forwarder
+    plugins/scribe-systemd
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: 097890495cbb0e8b62106bcd090a5721c3f4b36f
+  tag: b8f1ebb46a91f1c634e616feb89ae34de5937e17
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -146,8 +175,36 @@ source-repository-package
     semantics/small-steps-test
     shelley/chain-and-ledger/dependencies/non-integer
     shelley/chain-and-ledger/executable-spec
+    shelley/chain-and-ledger/shelley-spec-ledger-test
     shelley-ma/impl
+    cardano-ledger-core
+    alonzo/impl
 
+-- A lot of plutus dependencies have to be synchronized with the dependencies of
+-- cardano-node. If you update cardano-node, please make sure that all dependencies
+-- of cardano-node are also updated.
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/cardano-node.git
+  tag: f3ef4ed72894499160f2330b91572a159005c148
+  subdir:
+    cardano-api
+    cardano-node
+    cardano-cli
+    cardano-config
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/Win32-network
+  tag: 94153b676617f8f33abe8d8182c37377d2784bd1
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/hedgehog-extras
+  tag: 8bcd3c9dc22cc44f9fcfe161f4638a384fc7a187
+
+-- The following dependencies are not mirrored in the
+-- stack.yaml file, but they are needed regardless by cabal.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
