--- a/mlabs/cabal.project
+++ b/mlabs/cabal.project
@@ -1,14 +1,8 @@
--- Bump this if you need newer packages
+-- in-line with: e3e220f5434d5cc01d613e656dc661acbadd55a5
+-- Keep this input-output-hk/plutus pinned with the one from plutus.
 index-state: 2021-07-07T00:00:00Z
              
 packages: ./.
-
--- You never, ever, want this.
-write-ghc-environment-files: never
-
--- Always build tests and benchmarks.
-tests: true
-benchmarks: true
 
 source-repository-package
   type: git
@@ -39,8 +33,7 @@ source-repository-package
           quickcheck-dynamic
           web-ghc
           word-array
-  -- Update plutus revision here! Make sure this matches `cat ./nix/sources.json | jq '.plutus.rev'`
-  tag: e3e220f5434d5cc01d613e656dc661acbadd55a5
+  tag: daf9d475398bd08b088baf35efea4bf5abea1569
 
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
@@ -50,6 +43,19 @@ source-repository-package
 -- re-update this section from the template when you do an upgrade.
 
 ---------- *replace here* ----------------------------------------------------------------------
+
+-- This is also needed so evenful-sql-common will build with a
+-- newer version of persistent. See stack.yaml for the mirrored
+-- configuration.
+-- We never, ever, want this.
+write-ghc-environment-files: never
+
+-- Always build tests and benchmarks.
+tests: true
+benchmarks: true
+
+-- The only sensible test display option
+test-show-details: streaming
 
 -- This is also needed so evenful-sql-common will build with a
 -- newer version of persistent. See stack.yaml for the mirrored
@@ -163,7 +169,7 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: b8f1ebb46a91f1c634e616feb89ae34de5937e17
+  tag: 6b0fca7a73c317f3af7c14dd4dc38178cc78a6c8
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -209,3 +215,4 @@ source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
   tag: cde90a2b27f79187ca8310b6549331e59595e7ba
+
