--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -23,7 +23,7 @@ maintainer:         Your email
 
 library
     exposed-modules:
-      Plutus.Contracts.NftMarketplace.OffChain.Endpoints Plutus.PAB.Simulation Plutus.Contracts.NftMarketplace.OnChain.NFT
+      Plutus.Contracts.NftMarketplace.Endpoints Plutus.Contracts.NftMarketplace.OffChain.Owner Plutus.Contracts.NftMarketplace.OnChain.Core.StateMachine Plutus.PAB.Simulation Plutus.Contracts.NftMarketplace.OnChain.NFT
     build-depends:
       base >= 4.9 && < 5,
       aeson,
