--- a/NodeFactory/stable-coin/plutus-stable-coin.cabal
+++ b/NodeFactory/stable-coin/plutus-stable-coin.cabal
@@ -29,13 +29,14 @@ common lang
 library
   hs-source-dirs:     src
   exposed-modules:
-    NodeFactory.Plutus.Contracts.Oracle.Core
-    NodeFactory.Plutus.Contracts.Oracle.Funds
-    NodeFactory.Plutus.Contracts.Oracle.PAB
+    -- NodeFactory.Plutus.Contracts.Oracle.Core
+    -- NodeFactory.Plutus.Contracts.Oracle.Funds
+    -- NodeFactory.Plutus.Contracts.Oracle.PAB
     -- NodeFactory.Plutus.Contracts.Oracle.Swap
     NodeFactory.Plutus.Contracts.StableCoin.Types
     NodeFactory.Plutus.Contracts.StableCoin.OnChain
     NodeFactory.Plutus.Contracts.StableCoin.OffChain
+    NodeFactory.Plutus.Contracts.Currency
   build-depends:      aeson
                     , base ^>=4.14.1.0
                     , containers
@@ -48,6 +49,7 @@ library
                     , plutus-tx-plugin
                     , plutus-tx
                     , plutus-use-cases
+                    , lens
                     , prettyprinter
                     , text
   default-language:   Haskell2010
