rollback: 69a677ee4ec7bc9b7adf49656972bda237db55f5

--- a/mlabs/Makefile
+++ b/mlabs/Makefile
@@ -1,8 +1,6 @@
-PROJ = "mlabs-plutus-use-cases"   # Project Name 
-COMP = "$(PROJ).components"       # Libraries
-EXES = "$(PROJ).components.exes"  # Executables 
-TEST = "$(PROJ).components.tests" # Tests
- 
+PROJ := mlabs-plutus-use-cases # Project Name 
+COMP := ${PROJ}.components     # Components
+
 .PHONY: build-nix hoogle build nix-build-library nix-build-executables \
         nix-build-test nix-repl requires_nix_shell
 
@@ -18,15 +16,15 @@ hoogle: requires_nix_shell
 
 # Build the library with nix.
 nix-build-library:
-	@ nix-build -A $(COMP)
+	@ nix-build -A ${COMP}
 
 # Build the executables with nix.
 nix-build-executables:
-	@ nix-build -A $(EXES)
+	@ nix-build -A ${COMP}.exes
 
 # Build the tests with nix.
 nix-build-test:
-	@ nix-build -A $(TEST)
+	@ nix-build -A ${COMP}.tests
 
 # Starts a ghci repl inside the nix environment.
 nix-repl: 
