--- a/eleks/nft/cabal.project
+++ b/eleks/nft/cabal.project
@@ -16,6 +16,7 @@ source-repository-package
   subdir:
     freer-extras
     playground-common
+    plutus-chain-index
     plutus-core
     plutus-contract
     plutus-ledger
@@ -27,7 +28,7 @@ source-repository-package
     prettyprinter-configurable
     quickcheck-dynamic
     word-array
-  tag: plutus-starter-devcontainer/v1.0.6
+  tag: master
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
 -- given above.
@@ -107,8 +108,9 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: e50613562d6d4a0f933741fcf590b0f69a1eda67
+  tag: e338f2cf8e1078fbda9555dd2b169c6737ef6774
   subdir:
+    monoidal-synchronisation
     typed-protocols
     typed-protocols-examples
     ouroboros-network
@@ -119,7 +121,7 @@ source-repository-package
     ouroboros-consensus-cardano
     ouroboros-consensus-shelley
     io-sim
-    io-sim-classes
+    io-classes
     network-mux
 
 source-repository-package
@@ -130,12 +132,16 @@ source-repository-package
     iohk-monitoring
     tracer-transformers
     contra-tracer
+    plugins/backend-aggregation
     plugins/backend-ekg
+    plugins/backend-monitoring
+    plugins/backend-trace-forwarder
+    plugins/scribe-systemd
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: a3ef848542961079b7cd53d599e5385198a3035c
+  tag: 6b0fca7a73c317f3af7c14dd4dc38178cc78a6c8
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -158,9 +164,12 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: b3cabae6b3bf30a0b1b4e78bc4b67282dabad0a6
+  tag: f3ef4ed72894499160f2330b91572a159005c148
   subdir:
     cardano-api
+    cardano-node
+    cardano-cli
+    cardano-config
 
 source-repository-package
   type: git
