calculate bundle id

--- a/MetaLamp/nft-marketplace/plutus-starter.cabal
+++ b/MetaLamp/nft-marketplace/plutus-starter.cabal
@@ -35,6 +35,8 @@ library
       prettyprinter,
       lens,
       semigroups,
+      cryptonite,
+      memory,
       -- Plutus:
       playground-common,
       plutus-contract,
