--- a/mlabs/Makefile
+++ b/mlabs/Makefile
@@ -1,9 +1,5 @@
-PROJ := mlabs-plutus-use-cases # Project Name 
-COMP := ${PROJ}.components     # Components
-
 .PHONY: build-nix hoogle build nix-build-library nix-build-executables \
-        nix-build-test nix-repl requires_nix_shell
-
+        nix-build-test nix-repl requires_nix_shell ci-build-run
 
 # Generate TOC for README.md
 # It has to be manually inserted into the README.md for now.
@@ -14,17 +10,21 @@ generate_readme_contents:
 hoogle: requires_nix_shell
 	@ nix-shell --pure --command "hoogle server --local --port 8008"
 
+# Attempt the CI locally
+ci-build-run:
+	@ nix-build ./nix/ci.nix  
+
 # Build the library with nix.
 nix-build-library:
-	@ nix-build -A ${COMP}
+	@ nix-build -A mlabs-plutus-use-cases.components
 
 # Build the executables with nix.
 nix-build-executables:
-	@ nix-build -A ${COMP}.exes
+	@ nix-build -A mlabs-plutus-use-cases.components.exes
 
 # Build the tests with nix.
 nix-build-test:
-	@ nix-build -A ${COMP}.tests
+	@ nix-build -A mlabs-plutus-use-cases.components.tests
 
 # Starts a ghci repl inside the nix environment.
 nix-repl: 
@@ -50,3 +50,11 @@ stack-watch:
 # Watch Test with Stack.
 stack-test-watch: 
 	stack test --file-watch 
+	
+# Add folder locations to the list to be reformatted. 
+fourmolu-format:
+	@ echo "> Formatting all .hs files"
+	fourmolu -i $$(find src/  -iregex ".*.hs")
+	fourmolu -i $$(find test/ -iregex ".*.hs")
+	fourmolu -i $$(find app/  -iregex ".*.hs")
+
