--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -104,6 +104,7 @@ library
     Mlabs.Governance.Contract.Api
     Mlabs.Governance.Contract.Emulator.Client
     Mlabs.Governance.Contract.Server
+    Mlabs.Governance.Contract.Simulator.Handler
     Mlabs.Governance.Contract.Validation
     Mlabs.Lending.Contract
     Mlabs.Lending.Contract.Api
@@ -145,6 +146,13 @@ executable nft-demo
   import:  common-language
   main-is: nft-demo/Main.hs
   build-depends: mlabs-plutus-use-cases
+
+executable governance-demo
+  import:  common-imports
+  import:  common-language
+  main-is: governance-demo/Main.hs
+  build-depends: 
+      mlabs-plutus-use-cases
 
 executable lendex-demo
   import:  common-imports
