integrate oracle with mutual bet contract

--- a/eleks/oracle/mutual-bet.cabal
+++ b/eleks/oracle/mutual-bet.cabal
@@ -26,6 +26,7 @@ library
       Contracts.MutualBet
       Contracts.MutualBet.OffChain
       Contracts.Oracle
+      Contracts.Types
       Pab.Game
     build-depends:
       aeson,
