--- a/dquadrant/nft/cabal.project
+++ b/dquadrant/nft/cabal.project
@@ -11,25 +11,27 @@ benchmarks: true
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/plutus.git
-  subdir: 
+  subdir:
     freer-extras
+    plutus-chain-index
     playground-common
-    plutus-core 
-    plutus-contract 
-    plutus-ledger 
-    plutus-ledger-api 
-    plutus-tx 
-    plutus-tx-plugin 
+    plutus-core
+    plutus-contract
+    plutus-ledger
+    plutus-ledger-api
+    plutus-tx
+    plutus-tx-plugin
     plutus-pab
     plutus-use-cases
     prettyprinter-configurable
     word-array
     quickcheck-dynamic
-  tag: bd16cc29045ffc7eaa6beaabe3b985a56cb9292a
+    playground-common
+  tag: cc7bc06c4344cee6cd59bc170063fd627da25ed3
 
 -- The following sections are copied from the 'plutus' repository cabal.project at the revision
--- given above. 
--- This is necessary because the  'plutus' libraries depend on a number of other libraries which are 
+-- given above.
+-- This is necessary because the  'plutus' libraries depend on a number of other libraries which are
 -- not on Hackage, and so need to be pulled in as `source-repository-package`s themselves. Make sure to
 -- re-update this section from the template when you do an upgrade.
 package eventful-sql-common
@@ -58,11 +60,13 @@ constraints:
 -- (NOTE this will change to ieee754 in newer versions of nixpkgs).
 extra-packages: ieee, filemanip
 
--- Drops an instance breaking our code. Should be released to Hackage eventually.
+-- https://github.com/Quid2/flat/pull/22 fixes a potential exception
+-- when decoding invalid (e.g. malicious) text literals.
 source-repository-package
   type: git
-  location: https://github.com/Quid2/flat.git
-  tag: 95e5d7488451e43062ca84d5376b3adcc465f1cd
+  -- location: https://github.com/Quid2/flat.git
+  location: https://github.com/michaelpj/flat.git
+  tag: ee59880f47ab835dbd73bea0847dab7869fc20d8
 
 -- Needs some patches, but upstream seems to be fairly dead (no activity in > 1 year)
 source-repository-package
@@ -78,19 +82,22 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-crypto.git
-  tag: ce8f1934e4b6252084710975bd9bbc0a4648ece4
+  tag: 07397f0e50da97eaa0575d93bee7ac4b2b2576ec
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-base
-  tag: a715c7f420770b70bbe95ca51d3dec83866cb1bd
+  tag: cb0f19c85e5bb5299839ad4ed66af6fa61322cc4
   subdir:
+    base-deriving-via
     binary
     binary/test
-    slotting
     cardano-crypto-class
     cardano-crypto-praos
     cardano-crypto-tests
+    measures
+    orphans-deriving-via
+    slotting
     strict-containers
 
 source-repository-package
@@ -104,8 +111,9 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/ouroboros-network
-  tag: e50613562d6d4a0f933741fcf590b0f69a1eda67
+  tag: 877ce057ff6fb086474c8eaad53f2b7f0e0fce6b
   subdir:
+    monoidal-synchronisation
     typed-protocols
     typed-protocols-examples
     ouroboros-network
@@ -116,23 +124,27 @@ source-repository-package
     ouroboros-consensus-cardano
     ouroboros-consensus-shelley
     io-sim
-    io-sim-classes
+    io-classes
     network-mux
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/iohk-monitoring-framework
-  tag: 34abfb7f4f5610cabb45396e0496472446a0b2ca
+  tag: 808724ff8a19a33d0ed06f9ef59fbd900b08553c
   subdir:
     iohk-monitoring
     tracer-transformers
     contra-tracer
+    plugins/backend-aggregation
     plugins/backend-ekg
+    plugins/backend-monitoring
+    plugins/backend-trace-forwarder
+    plugins/scribe-systemd
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-ledger-specs
-  tag: a3ef848542961079b7cd53d599e5385198a3035c
+  tag: d5b184a820853c7ba202efd615b8fadca1acb52c
   subdir:
     byron/chain/executable-spec
     byron/crypto
@@ -155,26 +167,32 @@ source-repository-package
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/cardano-node.git
-  tag: b3cabae6b3bf30a0b1b4e78bc4b67282dabad0a6
+  tag: ed11e8b6429d4af1cb2539460e5cb2283a06b2dc
   subdir:
     cardano-api
+    cardano-node
+    cardano-cli
+    cardano-config
+
+source-repository-package
+  type: git
+  location: https://github.com/input-output-hk/optparse-applicative
+  tag: 7497a29cb998721a9068d5725d49461f2bba0e7a
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/Win32-network
-  tag: 94153b676617f8f33abe8d8182c37377d2784bd1
+  tag: 3825d3abf75f83f406c1f7161883c438dac7277d
 
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/hedgehog-extras
-  tag: 8bcd3c9dc22cc44f9fcfe161f4638a384fc7a187
+  tag: edf6945007177a638fbeb8802397f3a6f4e47c14
 
--- The following dependencies are not mirrored in the
--- stack.yaml file, but they are needed regardless by cabal.
 source-repository-package
   type: git
   location: https://github.com/input-output-hk/goblins
-  
+  tag: cde90a2b27f79187ca8310b6549331e59595e7ba
 
 package plutus-tokens
    coverage: True
