update: types/server - WIP test

--- a/mlabs/mlabs-plutus-use-cases.cabal
+++ b/mlabs/mlabs-plutus-use-cases.cabal
@@ -76,11 +76,21 @@ common common-language
       
 common common-configs
   default-language: Haskell2010
-                     
+
+common common-ghc-options
+  Ghc-Options:
+    -fno-ignore-interface-pragmas
+    -fno-omit-interface-pragmas
+    -fno-specialize
+    -fno-strictness
+    -fno-warn-orphans
+    -fobject-code
+
 library
   import:  common-imports
   import:  common-language
   import:  common-configs
+  import:  common-ghc-options
                   
   Ghc-Options:
     -Wall
@@ -138,18 +148,22 @@ executable mlabs-plutus-use-cases
   import:  common-imports
   import:  common-language
   import:  common-configs
+  import:  common-ghc-options
+
   main-is: app/Main.hs
   build-depends: mlabs-plutus-use-cases
 
 executable nft-demo
   import:  common-imports
   import:  common-language
+  import:  common-ghc-options  
   main-is: nft-demo/Main.hs
   build-depends: mlabs-plutus-use-cases
 
 executable governance-demo
   import:  common-imports
   import:  common-language
+  import:  common-ghc-options  
   main-is: governance-demo/Main.hs
   build-depends: 
       mlabs-plutus-use-cases
@@ -158,6 +172,7 @@ executable lendex-demo
   import:  common-imports
   import:  common-language
   import:  common-configs
+  import:  common-ghc-options  
   main-is: lendex-demo/Main.hs
   build-depends: mlabs-plutus-use-cases
 
@@ -165,6 +180,7 @@ Test-suite mlabs-plutus-use-cases-tests
   import:          common-imports
   import:          common-language
   import:          common-configs
+  import:  common-ghc-options  
   Type:            exitcode-stdio-1.0
   hs-source-dirs:  test
   Main-is:         Main.hs
